feat: assign defect groups to nomenclature
